--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ozafy/rail-commander-server.git"
+  },
   "keywords": [],
   "author": "Laurens Panier",
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://github.com/Ozafy/rail-commander-server#readme",
+  "dependencies": {
+    "node-poweredup": "^6.2.0"
+  }
 }
